# FlowGuard

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.flowguard/: model-regression-manifest.json  project.toml
.skillguard/: author-project.json  project.json
assets/: public-export-policy.json
docs/: agents_snippet.md  api_surface.md  behavior_commitment_ledger.md  benchmark_baseline_contract.md  benchmark_zoo.md  budgeted_model_groups.md  check_plan.md  code_structure_recommendation.md  compatibility_surface_classification.md  concept.md  conformance_testing.md  contract_composition.md  development_process_flow.md  development_process_strategy_selection.md  engineering_hardening.md  evidence_baseline.md  existing_model_preflight.md  field_lifecycle_inventory.md  field_lifecycle_mesh.md  flowguard_closure_contract.md  flowguard_model_miss_review.md  flowguard_primary_path_authority.md  flowguard_project_topology.md  flowguard_self_maintenance_mesh.md  flowguard_self_review.md  framework_upgrade_checks.md  github_release_checklist.md  hierarchical_model_mesh.md  invariant_examples.md  layered_boundary_proof.md  loop_detection.md  model_mesh_protocol.md  model_similarity_consolidation.md  model_test_alignment.md  model_topology_hazard_review.md  modeling_protocol.md  obligation_family_parity.md  plan_detailing_compiler.md  plan_intake_claims.md  product_architecture.md  (+20 more)
examples/: __init__.py  mermaid_export_example.py
flowguard/: __init__.py  __main__.py  adoption.py  adoption_audit.py  agent_workflow_rehearsal.py  audit.py  (+110 more)
(+1782 files in other folders)
