[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "flowguard"
version = "0.3.0"
description = "Model-first workflow checks for AI agents and process preflights."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
flowguard = "flowguard.__main__:main"

[tool.setuptools.packages.find]
include = ["flowguard*"]
