[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "flowguard"
version = "0.57.0"
description = "Model-first workflow checks for AI agents and process preflights."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
spec-providers = ["PyYAML>=6.0"]

[project.scripts]
flowguard = "flowguard.__main__:main"

[tool.setuptools.packages.find]
include = ["flowguard*"]
